--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,40 @@
 nav{
-    background-color: #5FA7EE;
+    /* background-color: #0779e4; */
+    background-color: transparent;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 70px;
+    position: fixed;
+    right: 0;
+    left: 0;
+}
+.nav-items {
+    width: 50%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+.hero {
+    background-image: url(../images/asset\ 0.jpeg);
+    height: 100vh;
+    background-size: cover;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
+}
+.hero-content{
+    width: 80%;
+    margin: auto;
+}
+.bio{
+    /* inline-size: 60px; */
+    /* overflow-wrap: break-word; */
+    width: 60%;
+    line-height: 2.5;
+    
 }
 
 .text-white{
