--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 nav{
-    /* background-color: #0779e4; */
+    background-color: #0779e4;
     background-color: transparent;
     display: flex;
     flex-direction: row;
@@ -7,6 +7,7 @@ nav{
     align-items: center;
     height: 70px;
     position: fixed;
+    top: 0%;
     right: 0;
     left: 0;
 }
@@ -16,31 +17,30 @@ nav{
     flex-direction: row;
     justify-content: space-between;
 }
-.hero {
-    background-image: url(../images/asset\ 0.jpeg);
-    height: 100vh;
+.hero{
+    background-image: url(../images/asset0.jpeg);
     background-size: cover;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
 }
+
 .hero-content{
     width: 80%;
-    margin: auto;
+    margin: 10%;
 }
-.bio{
-    /* inline-size: 60px; */
-    /* overflow-wrap: break-word; */
-    width: 60%;
-    line-height: 2.5;
-    
-}
-
-.text-white{
+.text-white {
     color: white;
 }
 
-.text-bold{
+.bio{
+    color: black;
+    width: 60%;
+}
+
+.text-bold {
     font-weight: bold;
+
 }
